init, styles, services, refactor

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rick-and-morty-app",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://github.com/claudiaarivera/rick-and-morty-app​",
+  "homepage":"https://github.com/claudiaarivera/rickandmorty-app.git​",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
